# patchhive-monorepo

./: .dockerignore  .env.example  .gitignore  2026-04-24-service-token-auth.md  AGENTS.md  CLAUDE.md  CODE_REVIEW_HERMES.md  CODE_REVIEW_VEX.md  CONTRIBUTING.md  FUTURE_PLANS.md  FUTURE_PLANS_TUCK.md  LICENSE  README.md  README1.md  REMOVE_ME_PATCHHIVE_SITE_COPY.md  SECURITY.md  package-lock.json  package.json
.cargo/: config.toml  local-patches.toml
.github/: FUNDING.yml
.github/workflows/: codeql.yml  publish-ai-models-package.yml  publish-ui-package.yml  rust-check.yml  suite-drift.yml
crates/patchhive-github-data/: Cargo.toml  README.md
crates/patchhive-github-data/.github/workflows/: ci.yml
crates/patchhive-github-data/src/: client.rs  errors.rs  lib.rs  models.rs
crates/patchhive-github-pr/: Cargo.toml  README.md
crates/patchhive-github-pr/.github/workflows/: ci.yml
crates/patchhive-github-pr/src/: client.rs  lib.rs  models.rs  webhook.rs
crates/patchhive-github-security/: Cargo.toml  README.md
crates/patchhive-github-security/.github/workflows/: ci.yml
crates/patchhive-github-security/src/: client.rs  lib.rs  models.rs
crates/patchhive-product-core/: Cargo.toml  README.md
crates/patchhive-product-core/src/: auth.rs  branding.rs  contract.rs  environment.rs  github_auth.rs  github_permissions.rs  hivecore_policy.rs  lib.rs  rate_limit.rs  repo_memory.rs  scheduling.rs  scope_policy.rs  secrets.rs  sqlite.rs  startup.rs  validation.rs
docs/: CONFIGURATION_STANDARDS.md  DOCUMENTATION_MAP.md  FUTURE_PLANS.md  PRODUCT_README_TEMPLATE.md  PatchHive_Improvements.md  README.md  fix_soon.md  future-product-opportunities.md  github-token-scopes.md  hivecore-first-stack-readiness.md  hivecore-repository-safety-and-pr-budgets.md  hivecore-suite-bootstrap-wizard.md  inbound-email-architecture.md  maintainerbot-operating-mode.md  patchhive-registry.md  platform-guardrails.md  product-api-contract-v1.md  product-export-workflow.md  product-naming-strategy.md  product-operating-modes.md  product-starter-workflow.md  public-release-readiness.md  release-checklist.md  shared-scheduling-architecture.md  shared-squad-architecture.md  sqlite-connection-strategy.md  suite-backend-direction.md  suite-runs-and-fix-capabilities.md  suite-stabilization-plan.md  ui-release-workflow.md  ui-v2-migration.md  ui-v3-migration.md
docs/products/: README.md  dep-triage.md  failguard.md  flake-sting.md  hive-core.md  merge-keeper.md  refactor-scout.md  release-sentry.md  repo-memory.md  repo-reaper.md  review-bee.md  signal-hive.md  trust-gate.md  vuln-triage.md
docs/reviews/: 2026-04-24-service-token-auth.md
patchhive-sites/: .gitignore  Patchive.md  Plan_v1___Plan_Product_Sites  README.md  Site_Wireframes_—_All_Products.md
patchhive-sites/apps/contributor/: index.html
patchhive-sites/apps/deptriage/: index.html
patchhive-sites/apps/failguard/: index.html
patchhive-sites/apps/flakesting/: index.html
patchhive-sites/apps/hivecore/: index.html
patchhive-sites/apps/mergekeeper/: index.html
patchhive-sites/apps/patchhive/: index.html
products/dep-triage/: .env.example  .gitignore  README.md  docker-compose.yml
products/flake-sting/: .env.example  .gitignore  README.md  docker-compose.yml
products/flake-sting/backend/: Cargo.toml  Dockerfile
products/flake-sting/backend/src/: auth.rs  db.rs  github.rs  lib.rs  main.rs  models.rs  pipeline.rs  startup.rs  state.rs
products/flake-sting/backend/src/pipeline/: analysis.rs  routes.rs
products/hive-core/: .env.example  .gitignore  README.md  docker-compose.yml
products/merge-keeper/: .env.example  .gitignore  README.md  docker-compose.yml
products/refactor-scout/: .env.example  README.md  docker-compose.yml
products/release-sentry/: .env.example  .gitignore  README.md  docker-compose.yml
products/release-sentry/backend/: Cargo.toml  Dockerfile
products/release-sentry/backend/src/: db.rs  github.rs  lib.rs  main.rs  models.rs  pipeline.rs  startup.rs  state.rs
products/release-sentry/backend/src/pipeline/: analysis.rs  routes.rs
products/repo-memory/: .env.example  .gitignore  README.md  docker-compose.yml
products/repo-reaper/: .env.example  README.md  docker-compose.yml
products/review-bee/: .env.example  README.md  docker-compose.yml
products/signal-hive/: .env.example  README.md  docker-compose.yml
products/trust-gate/: .env.example  README.md  docker-compose.yml
products/trust-gate/backend/: Cargo.toml  Dockerfile
products/trust-gate/backend/src/: auth.rs  db.rs  github.rs  lib.rs  main.rs  models.rs  pipeline.rs  startup.rs  state.rs
products/trust-gate/backend/src/pipeline/: failguard.rs  github.rs  review.rs  routes.rs  rules.rs  types.rs
products/vuln-triage/: .env.example  README.md  docker-compose.yml
prototypes/: vuln-triage-calm-mockup.html
scripts/: check-rust-packages.sh  check-suite-drift.sh  codeql-rust-build.sh  export-crate.sh  export-product.sh  export-service.sh  export-template.sh  migrate-unified-env.sh  new-product.sh  refresh-crate-lockfile.sh  refresh-product-lockfile.sh  refresh-template-lockfile.sh  release-suite.sh  set-signal-api-key.sh  set-suite-api-key.sh  smoke-frontend-package-deps.sh  smoke-launcher.sh  suite-common.sh  sync-crate-mirror.sh  sync-package-mirror.sh  version-ui.sh
services/patchhive-backend/: Cargo.toml  README.md
services/patchhive-backend/registry/products/: dep-triage.toml  flake-sting.toml  merge-keeper.toml  refactor-scout.toml  release-sentry.toml  repo-memory.toml  repo-reaper.toml  review-bee.toml  signal-hive.toml  trust-gate.toml  vuln-triage.toml
services/patchhive-backend/src/: config.rs  gateway.rs  main.rs  models.rs  products.rs  registry.rs  routes.rs
services/patchhive-launcher/: Cargo.toml  README.md
services/patchhive-launcher/src/: main.rs
services/patchhive-registry/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/patchhive-registry/src/: config.rs  db.rs  main.rs  models.rs  routes.rs  state.rs
unified-ui-revamp-main/src/: routeTree.gen.ts  styles.css
(+444 files in other folders)
