[package]
name = "patchhive-github-security"
version = "0.1.0"
edition = "2021"
description = "Shared Rust GitHub security data client for PatchHive products."
license = "MIT"
repository = "https://github.com/patchhive/patchhive-github-security.git"
homepage = "https://github.com/patchhive/patchhive-github-security"
keywords = ["patchhive", "github", "security", "dependabot", "rust"]

[lib]
name = "patchhive_github_security"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
patchhive-github-data = { git = "https://github.com/patchhive/patchhive-github-data.git", rev = "335ebec68a79098ed9eebdde90bff522146d493d", version = "0.1.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
