[package]
name = "patchhive-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared PatchHive suite backend runtime."
repository = "https://github.com/patchhive/patchhive2"

[[bin]]
name = "patchhive-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
dep-triage = { path = "../../products/dep-triage/backend" }
flake-sting = { path = "../../products/flake-sting/backend" }
merge-keeper = { path = "../../products/merge-keeper/backend" }
release-sentry = { path = "../../products/release-sentry/backend" }
repo-memory = { path = "../../products/repo-memory/backend" }
review-bee = { path = "../../products/review-bee/backend" }
signal-hive = { path = "../../products/signal-hive/backend" }
trust-gate = { path = "../../products/trust-gate/backend" }
vuln-triage = { path = "../../products/vuln-triage/backend" }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
