[package]
name = "patchhive-launcher"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "patchhive-launcher"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
patchhive-product-core = { path = "../../crates/patchhive-product-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
