[package]
name = "patchhive-registry"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Opt-in PatchHive suite registry service."
repository = "https://github.com/patchhive/patchhive2"

[[bin]]
name = "patchhive-registry"
path = "src/main.rs"

[dependencies]
anyhow = "1"
patchhive-product-core = { path = "../../crates/patchhive-product-core" }
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
