[package]
name = "flake-sting"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "flake-sting"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
patchhive-product-core = { path = "../../../crates/patchhive-product-core" }
patchhive-github-data = { git = "https://github.com/patchhive/patchhive-github-data.git", rev = "fd7fabdabeea87d25965c26d59f5bc82d7e9f311", version = "0.1.0" }
uuid = { version = "1", features = ["serde", "v4"] }
