[package]
name = "trust-gate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trust-gate"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
glob = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
patchhive-product-core = { git = "https://github.com/patchhive/patchhive-product-core.git", rev = "3a1864a628c0024fa912eebfda39487311fbdbcc", version = "0.1.0" }
patchhive-github-pr = { git = "https://github.com/patchhive/patchhive-github-pr.git", rev = "18d9e3517fa9daca2b8ddfac4ce692de7d1d0aa6", version = "0.1.0" }
